[gd_scene load_steps=13 format=2]

[ext_resource path="res://_scripts/card_visual_only.gd" type="Script" id=1]
[ext_resource path="res://_resources/fonts/kaiu.ttf" type="FontFile" id=2]
[ext_resource path="res://_resources/fonts/Yu-Gi-Oh! Matrix Regular Small Caps 2.ttf" type="FontFile" id=3]
[ext_resource path="res://_resources/_attributes/divine.png" type="Texture2D" id=4]
[ext_resource path="res://_resources/_card_artwork/00000.png" type="Texture2D" id=5]
[ext_resource path="res://_resources/card_design/frame_monster.png" type="Texture2D" id=6]
[ext_resource path="res://_resources/card_design/texture_back.png" type="Texture2D" id=8]
[ext_resource path="res://_resources/card_design/star_level.png" type="Texture2D" id=9]
[ext_resource path="res://_resources/card_design/texture_yellow.png" type="Texture2D" id=15]

[sub_resource type="FontFile" id=2]
size = 44
outline_size = 1
outline_color = Color( 0, 0, 0, 0.0980392 )
use_mipmaps = true
use_filter = true
extra_spacing_char = -1
font_data = ExtResource( 3 )

[sub_resource type="FontFile" id=1]
size = 26
outline_size = 1
outline_color = Color( 0, 0, 0, 0.152941 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="FontFile" id=3]
size = 28
use_filter = true
font_data = ExtResource( 3 )

[node name="card_visual_only" type="Button"]
anchor_right = 0.394
offset_left = -166.0
offset_top = -240.0
offset_right = -339.32
offset_bottom = 240.0
pivot_offset = Vector2( 165, 240 )
focus_mode = 0
focus_mode = 0
flat = true
script = ExtResource( 1 )

[node name="card_design" type="Control" parent="."]
offset_right = 331.0
offset_bottom = 482.0
pivot_offset = Vector2( 165, 241 )
mouse_filter = 2
input_pass_on_modal_close_click = false

[node name="background_texture" type="Sprite2D" parent="card_design"]
position = Vector2( 165, 240 )
texture = ExtResource( 15 )

[node name="artwork" type="Sprite2D" parent="card_design"]
position = Vector2( 164, 240 )
scale = Vector2( 1.02, 1.02 )
texture = ExtResource( 5 )

[node name="card_frame" type="Sprite2D" parent="card_design"]
position = Vector2( 165, 240 )
scale = Vector2( 1.01, 1.01 )
texture = ExtResource( 6 )

[node name="card_name" type="Label" parent="card_design"]
offset_left = 33.0
offset_top = 23.0
offset_right = 474.0
offset_bottom = 68.0
scale = Vector2( 1, 1.05 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = SubResource( 2 )
text = "Shiny Black \"C\""

[node name="attribute" type="Sprite2D" parent="card_design"]
position = Vector2( 280, 43 )
scale = Vector2( 0.71, 0.71 )
texture = ExtResource( 4 )

[node name="monster_features" type="Node2D" parent="card_design"]
position = Vector2( 165, 240 )

[node name="level" type="Node2D" parent="card_design/monster_features"]

[node name="upto11" type="Node2D" parent="card_design/monster_features/level"]
visible = false

[node name="level1" type="Sprite2D" parent="card_design/monster_features/level/upto11"]
position = Vector2( 125, -156 )
texture = ExtResource( 9 )

[node name="level2" type="Sprite2D" parent="card_design/monster_features/level/upto11"]
position = Vector2( 100, -156 )
texture = ExtResource( 9 )

[node name="level3" type="Sprite2D" parent="card_design/monster_features/level/upto11"]
position = Vector2( 75, -156 )
texture = ExtResource( 9 )

[node name="level4" type="Sprite2D" parent="card_design/monster_features/level/upto11"]
position = Vector2( 50, -156 )
texture = ExtResource( 9 )

[node name="level5" type="Sprite2D" parent="card_design/monster_features/level/upto11"]
position = Vector2( 25, -156 )
texture = ExtResource( 9 )

[node name="level6" type="Sprite2D" parent="card_design/monster_features/level/upto11"]
position = Vector2( 0, -156 )
texture = ExtResource( 9 )

[node name="level7" type="Sprite2D" parent="card_design/monster_features/level/upto11"]
position = Vector2( -25, -156 )
texture = ExtResource( 9 )

[node name="level8" type="Sprite2D" parent="card_design/monster_features/level/upto11"]
position = Vector2( -50, -156 )
texture = ExtResource( 9 )

[node name="level9" type="Sprite2D" parent="card_design/monster_features/level/upto11"]
position = Vector2( -75, -156 )
texture = ExtResource( 9 )

[node name="level10" type="Sprite2D" parent="card_design/monster_features/level/upto11"]
position = Vector2( -100, -156 )
texture = ExtResource( 9 )

[node name="level11" type="Sprite2D" parent="card_design/monster_features/level/upto11"]
position = Vector2( -125, -156 )
texture = ExtResource( 9 )

[node name="level12" type="Node2D" parent="card_design/monster_features/level"]
position = Vector2( 2, 0 )

[node name="level1" type="Sprite2D" parent="card_design/monster_features/level/level12"]
position = Vector2( 125, -156 )
texture = ExtResource( 9 )

[node name="level2" type="Sprite2D" parent="card_design/monster_features/level/level12"]
position = Vector2( 102, -156 )
texture = ExtResource( 9 )

[node name="level3" type="Sprite2D" parent="card_design/monster_features/level/level12"]
position = Vector2( 79, -156 )
texture = ExtResource( 9 )

[node name="level4" type="Sprite2D" parent="card_design/monster_features/level/level12"]
position = Vector2( 56, -156 )
texture = ExtResource( 9 )

[node name="level5" type="Sprite2D" parent="card_design/monster_features/level/level12"]
position = Vector2( 33, -156 )
texture = ExtResource( 9 )

[node name="level6" type="Sprite2D" parent="card_design/monster_features/level/level12"]
position = Vector2( 10, -156 )
texture = ExtResource( 9 )

[node name="level7" type="Sprite2D" parent="card_design/monster_features/level/level12"]
position = Vector2( -13, -156 )
texture = ExtResource( 9 )

[node name="level8" type="Sprite2D" parent="card_design/monster_features/level/level12"]
position = Vector2( -36, -156 )
texture = ExtResource( 9 )

[node name="level9" type="Sprite2D" parent="card_design/monster_features/level/level12"]
position = Vector2( -59, -156 )
texture = ExtResource( 9 )

[node name="level10" type="Sprite2D" parent="card_design/monster_features/level/level12"]
position = Vector2( -82, -156 )
texture = ExtResource( 9 )

[node name="level11" type="Sprite2D" parent="card_design/monster_features/level/level12"]
position = Vector2( -105, -156 )
texture = ExtResource( 9 )

[node name="level12" type="Sprite2D" parent="card_design/monster_features/level/level12"]
position = Vector2( -128, -156 )
texture = ExtResource( 9 )

[node name="atk_def" type="Node2D" parent="card_design/monster_features"]
position = Vector2( 0, 2 )

[node name="atk" type="Label" parent="card_design/monster_features/atk_def"]
offset_left = 74.0
offset_top = 157.0
offset_right = 131.0
offset_bottom = 184.0
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/font = SubResource( 1 )
text = "2000"
align = 2

[node name="def" type="Label" parent="card_design/monster_features/atk_def"]
offset_left = 74.0
offset_top = 184.0
offset_right = 131.0
offset_bottom = 211.0
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/font = SubResource( 1 )
text = "0"
align = 2

[node name="spelltrap_features" type="Node2D" parent="card_design"]
visible = false

[node name="type_of_spelltrap" type="Label" parent="card_design/spelltrap_features"]
offset_left = 29.0
offset_top = 68.0
offset_right = 301.0
offset_bottom = 104.0
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/font = SubResource( 3 )
text = "Normal Spell Card"
align = 2
valign = 1

[node name="card_back" type="Sprite2D" parent="card_design"]
visible = false
position = Vector2( 164.75, 239.5 )
scale = Vector2( 1.01064, 1.01042 )
texture = ExtResource( 8 )

[node name="card_self_tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_card_visual_only_mouse_entered"]
